# ai-world-simulator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: errors.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/domain/: README.md  __init__.py  actions.py  character.py  common.py  enums.py  events.py  export_schemas.py  facts.py  observation.py  oracle.py  schemas.py  world.py
backend/app/infrastructure/database/: base.py  session.py
backend/app/infrastructure/redis/: client.py
backend/app/model_gateway/: README.md
backend/app/repositories/: README.md
backend/app/services/: README.md
backend/app/workflows/: README.md
backend/migrations/: env.py
backend/migrations/versions/: 20260723_0001_system_metadata.py
backend/tests/: conftest.py  test_config.py  test_domain_contracts.py  test_integration.py  test_readiness.py
backend/tests/fixtures/domain/: action_intent.json  action_result.json  agent_belief.json  agent_profile.json  character.json  observation.json  oracle_request.json  oracle_response.json  world.json  world_event.json  world_fact.json
decisions/: ADR-001-world-state-authority.md  ADR-002-information-isolation.md  ADR-003-action-lifecycle.md  ADR-004-module-boundaries.md  ADR-005-repository-rules.md  ADR-006-model-gateway.md  ADR-007-concurrency.md  ADR-008-development-principles.md
docs/: ai-collaboration-guide.md  architecture-handbook.md  architecture.md  (+5 more)
(+38 files in other folders)
