[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-world-simulator-backend"
version = "0.1.0"
description = "Backend engineering skeleton for the AI world simulator"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

